Replace javafx file picker with compose file picker